[tool.poetry]
name = "cxrag"
version = "0.1.0"
description = ""
authors = ["ptsadi <putu.adi@hyrd.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pinecone = "^5.4.2"
datasets = "^3.2.0"
pillow = "^11.0.0"
pypng = "^0.20220715.0"
tensorflow = "^2.18.0"
tensorflow-text = "^2.18.1"
streamlit = "^1.41.1"
google-generativeai = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
